--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -1,6 +1,5 @@
 .card {
     border: 1px solid #f3f3f3;
-    padding: 30px;
     width: 220px;
     border-radius: 40px;
     margin-right: 30px;
@@ -15,6 +14,13 @@
     .favorite {
       position: absolute;
       cursor: pointer;
+      padding: 22px;
+    }
+
+    .image {
+      width: 100%;
+      height: 200px;
+      border-radius: 40px 40px 0 0;
     }
   
     span {
@@ -30,6 +36,7 @@
     h5 {
       font-weight: 400;
       font-size: 14px;
+      margin-top: 0;
     }
 
     .plus {
