--- a/src/index.scss
+++ b/src/index.scss
@@ -34,11 +34,47 @@ header {
   }
 }
 
+.cartEmpty {
+  text-align: center;
+
+  p {
+    width: 280px;
+    line-height: 24px;
+  }
+
+  .greenButton {
+    width: 245px;
+    margin-top: 20px;
+    &:hover {
+      img {
+        transform: rotate(180deg) translate(3px);
+      }
+    }
+    
+    img {
+      position: relative;
+      top: 1px;
+      transform: rotate(180deg);
+      margin-right: 15px;
+      transition: transform 0.15s ease-in-out;
+    }
+  }
+}
+
 .search-block {
   border: 1px solid #f3f3f3;
   border-radius: 10px;
   padding: 0 15px;
+  position: relative;
   
+  .clear {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    top: 14px;
+    right: 15px;
+  }
+
   input {
     border: 0;
     padding: 13px;
@@ -102,7 +138,9 @@ header {
 
   .greenButton {
     position: relative;
-
+    &:disabled {
+      animation: button-loading 0.6s ease-in-out infinite;
+    }
     &:hover {
       img {
         transform: translateX(5px); 
@@ -129,6 +167,11 @@ header {
     font-weight: 500;
     cursor: pointer;
     transition: background 0.1s ease-in-out;
+
+    &:disabled {
+      background-color: #bebebe !important;
+      cursor: default;
+    }
 
     &:hover {
       background: lighten(#9dd558, 5%);
@@ -172,5 +215,16 @@ header {
       opacity: 1;
     }  
   }
+}
 
+@keyframes button-loading {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.7;
+  }
+  100% {
+    opacity: 1;
+  }
 }
